Solves #33 - Include Skybox
Uses a sky background instead of the plain blue one.

css/og.css
- removed margin around the page (doesn't fit well with mobile and doesn't look
  good witch sky background)

index.html
- added skybox

myServer.js
- added res to accessible regions of web server (skybox ist located here)

--- a/css/og.css
+++ b/css/og.css
@@ -538,3 +538,8 @@
 textarea {
     width: 100%;
     overflow:auto;
+}
+
+body {
+    margin: 0px;
+}
